--- a/flask.html
+++ b/flask.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Flask</title>
     <link rel="stylesheet" href="css/base-style.css">
 </head>
 
 <body>
     <header>
-        <a href="">
+        <a href="index.html">
             <h2>Home</h2>
         </a>
         <nav>
             <ul>
-                <li><a href="git.html">Controle de versão</a></li>
+                <li><a href="git.html">Git e Github</a></li>
                 <li><a href="testes.html">Testes</a></li>
                 <li><a href="flask.html">Flask</a></li>
             </ul>
