Seção introdução finalizada

--- a/git.html
+++ b/git.html
@@ -31,36 +31,35 @@
 
           <!--SOBRE SECTION-->
           <div id="sobre" class="w3-container w3-margin-top-20-percent w3-cursive w3-large">
-            <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">ABOUT</h2>
+            <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">INTRODUÇÃO</h2>
             <p class="w3-margin-top-2"> 
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-               Nam porttitor sollicitudin efficitur. 
-               Integer posuere odio vel ullamcorper euismod. 
-               Aliquam sit amet nulla tortor. 
-               Integer vehicula nunc et condimentum feugiat. 
-               Aenean tempor, dolor in pharetra euismod, lacus eros suscipit massa, in aliquet risus orci non leo.
+              No nosso mundo moderno, estamos constantemente criando e editando arquivos dos mais diferentes tipos.
+              Desde arquivos de texto comuns, até planilhas de trabalho e arquivos de programação de aplicações dos mais
+              variados tipos. Nesse contexto, é normal que hajam erros e várias edições desses arquivos no processo de 
+              criação e edição dos mesmos, e, portanto, surge um problema: Como controlarmos o fluxo de edição desses
+              arquivos? Como "voltarmos atrás" em nossos arquivos quando erros forem cometidos? E como salvar com 
+              integridade todos esses arquivos, evitando grandes perdas de trabalho?
+              É nesse contexto que surgem os softwares de versionamento, entre os quais se destacam o Git e o Github.
             </p>
             <p class=""> 
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-               Nam porttitor sollicitudin efficitur. 
-               Integer posuere odio vel ullamcorper euismod. 
-               Aliquam sit amet nulla tortor. 
-               Integer vehicula nunc et condimentum feugiat. 
-               Aenean tempor, dolor in pharetra euismod, lacus eros suscipit massa, in aliquet risus orci non leo.
+              O conceito de "versão", no âmbito do da informática, se refere às modificações, dos mais variados tipos,
+              pelas quais um arquivo passa através do tempo. Geralmente, por convenção, são atribuídos números para
+              nomear cada uma das versões que são criadas de um mesmo arquivo. Geralmente, são usados dois números
+              principais, o major e o minor, separados por um ponto, para se referir à estas versões. 
+              O maior é alterado quando se produzem grandes alterações ou saltos qualitativos no desenvolvimento 
+              e o menor varia com as alterações ou as correcções mais pequenas.
+
             </p>
             <p class=""> 
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-               Nam porttitor sollicitudin efficitur. 
-               Integer posuere odio vel ullamcorper euismod. 
-               Aliquam sit amet nulla tortor. 
-               Integer vehicula nunc et condimentum feugiat. 
-               Aenean tempor, dolor in pharetra euismod, lacus eros suscipit massa, in aliquet risus orci non leo.
+              O Git e o Github nos permitem criar, alterar e gerenciar estas versões de arquivos, através da lógica de sistemas
+              distribuídos que permite o trabalho em conjunto com diversas pessoas e a criação de fluxos de trabalhos
+              diferentes do que são usados nos sistemas centralizados.
             </p>
           </div>
 
           <!--RESUMO-->
           <div id="resumo" class="w3-container w3-margin-top-20-percent w3-cursive">
-            <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">RESUME</h2>
+            <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">RESUMO</h2>
             <div class="w3-container w3-margin-top-2 w3-cursive">
 
                 <p class=""> 
