ajeitando url imagem

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div class="center column">
                 <h2>Testes</h2>
                 <p>Fazer testes é importante para o desenvolvimento do programa,
-                    a tecnica TDD é a mais indicada para a realização de um programa seguro e escalável,
-                    e com a biblioteca pytest para a realização de teste na linguagem python
+                    a técnica TDD é a mais indicada para a realização de um programa seguro e escalável,
+                    e com a biblioteca pytest é a mais utilizada para realização de teste na linguagem python
                 </p>
                 <a href="testes.html">Acessar</a>
             </div>
