--- a/git.html
+++ b/git.html
@@ -8,18 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/git-style.css" />
+    <link rel="stylesheet" href="css/git-style.css"/>
     <script src="https://unpkg.com/feather-icons@4.28.0/dist/feather.min.js"></script>
   </head>
-  <body>   
+  <body>
+    <div class="w3-container w3-padding-large w3-border-bottom w3-hide-small">
+      <a href="index.html" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green">INÍCIO</a>
+      <a href="#advantages" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">VANTAGENS</a>
+      <a href="#resumo" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">RESUMO</a>
+      <a href="#sobre" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">INTRODUÇÃO</a>
+    </div>   
       <section class="w3-threequarter w3-padding-large w3-right">
         <!--DESKTOP NAVIGATION-->
-        <div class="w3-container w3-padding-large w3-border-bottom w3-hide-small">
-          <a href="index.html" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green">INÍCIO</a>
-          <a href="#advantages" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">VANTAGENS</a>
-          <a href="#resumo" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">RESUMO</a>
-          <a href="#sobre" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">INTRODUÇÃO</a>
-        </div>
         <div class="content-container w3-margin-top-2">
           <!--INICIO SECTION-->
           <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
@@ -88,7 +88,7 @@
 
               </p>
 
-              <img src="img/git-working.png" width="400" height="200">
+              <img src="file:///C:/Users/Luiz/Desktop/topicos-main/img/git-working.png" width="400" height="200">
 
             <p class=""> 
                 Como mostrado na imagem acima, no Git existem três seções principais:
@@ -105,7 +105,7 @@
                 em outro computador</ul>
               </p>
 
-              <img src="img/git-flow.png" width="600" height="400">
+              <img src="file:///C:/Users/Luiz/Desktop/topicos-main/img/git-flow.png" width="600" height="400">
 
             <p class=""> 
                 O fluxo de trabalho do git(git flow), ilustrado na imagem acima, é um modus operandi padrão de se trabalhar
@@ -132,7 +132,7 @@
               de localmente, é feita na Web e, nesse caso, requer conexão com o servidor do Github e também acesso a Internet.    
             </p>
 
-            <img src="img/github-working.png" width="400" height="200">
+            <img src="file:///C:/Users/Luiz/Desktop/topicos-main/img/github-working.png" width="400" height="200">
 
             <p class=""> 
               Na imagem acima, vemos como funciona a integração da ferramenta Git com o Github. O fluxo do Git acontece 
