corrigindo link foto

--- a/git.html
+++ b/git.html
@@ -88,7 +88,7 @@
 
               </p>
 
-              <img src="file:///C:/Users/Luiz/Desktop/topicos-main/img/git-working.png" width="400" height="200">
+              <img src="img/git-working.png" width="400" height="200">
 
             <p class=""> 
                 Como mostrado na imagem acima, no Git existem três seções principais:
@@ -105,7 +105,7 @@
                 em outro computador</ul>
               </p>
 
-              <img src="file:///C:/Users/Luiz/Desktop/topicos-main/img/git-flow.png" width="600" height="400">
+              <img src="img/git-flow.png" width="600" height="400">
 
             <p class=""> 
                 O fluxo de trabalho do git(git flow), ilustrado na imagem acima, é um modus operandi padrão de se trabalhar
@@ -132,7 +132,7 @@
               de localmente, é feita na Web e, nesse caso, requer conexão com o servidor do Github e também acesso a Internet.    
             </p>
 
-            <img src="file:///C:/Users/Luiz/Desktop/topicos-main/img/github-working.png" width="400" height="200">
+            <img src="img/github-working.png" width="400" height="200">
 
             <p class=""> 
               Na imagem acima, vemos como funciona a integração da ferramenta Git com o Github. O fluxo do Git acontece 
