--- a/flask.html
+++ b/flask.html
@@ -20,9 +20,9 @@
   <body>
     <div class="w3-container w3-padding-large w3-border-bottom w3-hide-small">
       <a href="index.html" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green">INÍCIO</a>
-      <a href="#advantages" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">VANTAGENS</a>
-      <a href="#resumo" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">RESUMO</a>
+      <a href="#conclusao" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">CONCLUSAO</a>
       <a href="#primeiros_passos" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">PRIMEIROS PASSOS</a>
+      <a href="#introducao" class="w3-bar-item w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-green w3-hover-text-green w3-right w3-hide-small" style="border-width: 2px !important;" onclick="toggleNavigation()">INTRODUÇÃO</a>
     </div>   
       <section class="w3-threequarter w3-padding-large w3-right">
         <!--DESKTOP NAVIGATION-->
@@ -34,8 +34,8 @@
             <p>"Web development, one drop at a time"</p>
           </div>
 
-          <!--SOBRE SECTION-->
-          <div id="sobre" class="w3-container w3-margin-top-20-percent w3-cursive w3-large">
+          <!--INTRODUÇÃO SECTION-->
+          <div id="introducao" class="w3-container w3-margin-top-20-percent w3-cursive w3-large">
             <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">INTRODUÇÃO</h2>
             <p class="w3-margin-top-2"> 
                 O desenvolvimento de um site pode ser bem cansativo, principalmente sem o uso de frameworks. Mas quando o seu projeto é pequeno,
@@ -45,7 +45,7 @@
             
           </div>
 
-          <!--RESUMO-->
+          <!--PRIMEIROS PASSOS-->
           <div id="primeiros_passos" class="w3-container w3-margin-top-20-percent w3-cursive w3-large">
             <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">PRIMEIROS PASSOS</h2>
             <div class="w3-container w3-margin-top-2 w3-cursive">
@@ -107,22 +107,11 @@ def idade(idade):
                 </ul>
                  
           <!--ADVANTAGES SECTION-->
-          <div id="advantages" class="w3-container w3-margin-top-20-percent w3-cursive">
-            <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">VANTAGENS</h3>
+          <div id="conclusao" class="w3-container w3-margin-top-20-percent w3-cursive">
+            <h2 class="w3-border-bottom w3-border-amber" style="border-width: 3px !important;">CONCLUSÃO</h3>
             <div class="w3-margin-top-2" style="font-weight: 500;">
-                <p class=""> 
-                    Em suma, as ferramentas Git e Github são complementares pois cada uma possui uma vantagem, mas elas não 
-                    precisam serem usadas necessariamente juntas. A vantagem de se usar o Git é o fato de que não é necessário
-                    acesso a algum servidor externo para que se realizem todas as ações, o que faz estas ações serem bem mais
-                    rápidas, mas a desvantagem disso é que quaisquer problemas com os repositórios locais ou com a própria
-                    máquina local implicam em problemas com o projeto em si. 
-                    O Github, por sua vez, tem a vantagem de armazenar os repositórios e todas suas informações remotamente, e,
-                    sendo assim, não são necessárias preocupações com problemas no ambiente de trabalho local, pois mesmo que
-                    hajam problemas, o mesmo repositório pode ser acessado de qualquer outro ambiente e enviado(pull) 
-                    para um ambiente local novamente. Por outro lado, ele tem a desvantagem de precisar de conexão com um 
-                    servidor externo e com a internet, o que faz com que, no caso de quaisquer problemas com essas conexões,
-                    as ações não possam ser feitas devidamente, o que pode acarretar em percas de trabalho. Percebem? Cada 
-                    ferramenta compensa as desvantagens da outra, e, por isso, o ideal é serem usadas juntas. 
+                <p> 
+                    Esse é só uma parte mínima do que o Flask pode fazer, para saber mais acesse a sua <a href="https://flask.palletsprojects.com/en/2.2.x/">documentação</a>    
                 </p>
             </div>
           </div>
