Consertando mensagem na Home

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <h2>Testes</h2>
                 <p>Fazer testes é importante para o desenvolvimento do programa,
                     a técnica TDD é a mais indicada para a realização de um programa seguro e escalável,
-                    e com a biblioteca pytest é a mais utilizada para realização de teste na linguagem python
+                    e, nesse contexto, a biblioteca pytest é a mais utilizada para realização desses 
+                    testes na linguagem Python
                 </p>
                 <a href="testes.html">Acessar</a>
             </div>
