--- a/testes.html
+++ b/testes.html
@@ -86,7 +86,7 @@
 
             <p class=""> 
                 Para instalar a biblioteca pytest, basta rodar o seguinte comando:
-                <pre><code>pip install -U pytest</code></pre>
+                <pre><code>pip install pytest</code></pre>
               </p>
 
 
